genome to mito blast

--- a/results/04-mito-hunt/.gitignore
+++ b/results/04-mito-hunt/.gitignore
@@ -5,3 +5,10 @@ PGA_assembly.not
 PGA_assembly.nsq
 PGA_assembly.ntf
 PGA_assembly.nto
+Mmag_mito.ndb
+Mmag_mito.nhr
+Mmag_mito.nin
+Mmag_mito.not
+Mmag_mito.nsq
+Mmag_mito.ntf
+Mmag_mito.nto
