added large GenSAS annotation files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 *fasta.gz
 *.fasta
 *.fq
+Metacarcinus-magister-v1.0.a1.63b722ce105df-repeatmasker.repeats.fna
+Metacarcinus-magister-v1.0.a1.63b722ce105df-repeatmasker.repeats.gff3
