bismark re-run with scaffold only genome

--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,14 @@
 *fasta.gz
 *.fasta
 *.fq
-Metacarcinus-magister-v1.0.a1.63b722ce105df-repeatmasker.repeats.fna
-Metacarcinus-magister-v1.0.a1.63b722ce105df-repeatmasker.repeats.gff3
-PGA_assembly.gff3
-PGA_assembly.scaffolds_only.gff3
-meth_obj
-meth_unite_reshaped
-meth_unite
-MiSeq_5x
-meth_5x
-PGA_assembly.fasta
+*.fq.gz
+results/GAWN/full-assembly/PGA_assembly.gff3
+results/GAWN/scaffold-only-assembly/PGA_assembly.scaffolds_only.gff3
+results/GenSAS/Metacarcinus-magister-v1.0.a1.63b722ce105df-repeatmasker.repeats.fna
+results/GenSAS/Metacarcinus-magister-v1.0.a1.63b722ce105df-repeatmasker.repeats.gff3
+references/PGA_assembly.fasta
+results/methylkit/meth_obj
+results/methylkit/meth_unite_reshaped
+results/methylkit/meth_unite
+results/methylkit/MiSeq_5x
+results/methylkit/meth_5x
